# yolov7

./: .dockerignore  .gitignore  3ch_train.py  Dockerfile  Pipfile  README.md  ReadNote.md  Yolov7.ipynb  api.py  app.py  bentofile.yaml  build-docker.sh  cam.py  cam_capture_video.py  cam_experiment.py  cam_utils.py  check_diff.py  check_diff_v2.py  check_env.py  classes.txt  coco  convert_tgsse_to_yolo_format.py  demo.py  detect.py  detect_1.0.py  detect_RS.py  detect_and_count.py  detect_and_export.py  detect_ptg.py  detectar.py  detectarCarpeta.py  detector.py  driver.py  eigencam.py  end2end_onnxruntime.ipynb  end2end_tensorrt.ipynb  environment.yml  export.py  export.sh  extract_overlapped_patches.py  (+55 more)
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.mlsteam-ci/: mlsteam-yolov7.yaml
adapt_dataset/: recortar_imagen_overlap.py  recortar_imagen_overlap_loop.py  recortar_imagen_partes_iguales.py  recortar_labels.py  recortar_labels_1clase.py  recortar_labels_2clases.py  split_partitions.py
cfg/: yolov7-mask.yaml  yolov7-tiny.cfg  yolov7-tiny_darknet.cfg  yolov7-w6-pose.yaml  yolov7-w6-pose_leaky.yaml  yolov7-w6-pose_leaky_impr.yaml  yolov7.cfg  yolov7.yaml  yolov7_custom_3.yaml  yolov7_darknet.cfg  yolov7x.cfg  yolov7x_darknet.cfg
classification/: balance.py  export_cells_images.py  train_gtp.py  train_test_val_split.py
cls/: README.md  classifier.py
data/: .gitignore  battery.yaml  checkboxes.yaml  coco-custom.yaml  coco.yaml  coco128.yaml  coco_kpts.yaml  coco_kpts_128.yaml  coco_subset.yaml  drone.yaml  (+25 more)
deploy/TensoorRT/plugin/: CMakeLists.txt
(+450 files in other folders)
